internal-multi-cluster-gateway/v1alpha2/i-mc-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: internal-multi-cluster-gateway
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  addresses:
    - type: NamedAddress
      value: i-mc-gw-ip
