internal-multi-cluster-gateway/v1alpha2/i-mc-gw-httproute-split.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: internal-multi-cluster-httproute-split
spec:
  parentRefs:
    - name: internal-multi-cluster-gateway
  hostnames:
    - "i-mc-gw.gcpx.org"
  rules:
    - backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: tyo1-whereami
          port: 8080
          weight: 10
        - group: net.gke.io
          kind: ServiceImport
          name: tyo2-whereami
          port: 8080
          weight: 90
